--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -2,17 +2,18 @@
     <div class="box-border flex flex-col">
         @for (message of messages; track message; let i = $index) {
             @if (messages !== undefined) {
-                @if (i === 0) {
-                    <app-chat-seperator
-                        class="flex items-center text-[18px] my-[10px] px-4"
-                        [date]="messageService.formatDate(message.timestamp)">
-                    </app-chat-seperator>
-                } @else if (!messageService.isSameDay(messageService.getDateFromTimestamp(message.timestamp), messageService.getDateFromTimestamp(messages[i - 1].timestamp))) {
+                @if (i === 0  || !messageService.isSameDay(messageService.getDateFromTimestamp(message.timestamp), messageService.getDateFromTimestamp(messages[i - 1].timestamp))) {
                     <app-chat-seperator
                         class="flex items-center text-[18px] my-[10px] px-4"
                         [date]="messageService.formatDate(message.timestamp)">
                     </app-chat-seperator>
                 }
+                <!-- @else if (!messageService.isSameDay(messageService.getDateFromTimestamp(message.timestamp), messageService.getDateFromTimestamp(messages[i - 1].timestamp))) {
+                    <app-chat-seperator
+                        class="flex items-center text-[18px] my-[10px] px-4"
+                        [date]="messageService.formatDate(message.timestamp)">
+                    </app-chat-seperator>
+                } -->
             }
             <div id="{{ chatType }}{{ i }}" (click)="mainNavService.openThread(); openThread(message, i);" 
                 class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary"
