navigation header style

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <section class="flex flex-col h-full max-w-[1024px] rounded-[30px]  bg-white overflow-auto relative">
 
-    <div class="sticky top-0 items-center justify-between hidden w-full p-3 bg-white lg:flex">
+    <div class="sticky z-[1] top-0 items-center justify-between hidden w-full p-3 bg-white lg:flex">
 
         <div class="flex items-center gap-4 text-2xl font-bold">
             <img src="/assets/imgs/workspace-logo.svg" alt="">
