--- a/src/app/components/shared/popUp/members/members.component.html
+++ b/src/app/components/shared/popUp/members/members.component.html
@@ -1,10 +1,10 @@
-<section class="flex flex-col w-full gap-5 px-3 py-10 bg-white border border-black shadow-2xl h-96 rounded-3xl">
+<section class="flex flex-col w-full gap-5 px-3 py-10 bg-white shadow-2xl h-96 rounded-3xl">
 
 
     <div class="flex items-center justify-between h-10 px-5">
         <h2 class="text-2xl font-bold">Mitglieder</h2>
 
-        <img class="cursor-pointer hover:scale-[1.2] active:scale-[0.9] duration-200" src="/assets/icons/close.svg" alt="">
+        <img (click)="overlayService.membersOverlay()" class="cursor-pointer hover:scale-[1.2] active:scale-[0.9] duration-200" src="/assets/icons/close.svg" alt="">
     </div>
 
 
@@ -16,7 +16,7 @@
     </div>
 
     <div
-        class="flex items-center gap-4 py-3  cursor-pointer h-14 px-7 rounded-[30px] hover:bg-primary mx-5 hover:scale-[1.1] duration-200 shadow-md active:scale-[0.9]">
+        class="flex items-center gap-4 py-1  cursor-pointer h-14 px-7 rounded-[30px] hover:bg-primary mx-5 hover:scale-[1.1] duration-200 shadow-md active:scale-[0.9]">
         <img src="/assets/icons/person_add.svg" alt="">
         <span>
             Mitglieder hinzufüngen
