--- a/src/app/components/shared/popUp/members/members.component.html
+++ b/src/app/components/shared/popUp/members/members.component.html
@@ -1,17 +1,17 @@
 <section class="flex flex-col w-full gap-5 px-3 py-10 bg-white shadow-2xl h-96 rounded-3xl">
 
-
     <div class="flex items-center justify-between h-10 px-5">
         <h2 class="text-2xl font-bold">Mitglieder</h2>
 
-        <img (click)="overlayService.membersOverlay()" class="cursor-pointer hover:scale-[1.2] active:scale-[0.9] duration-200" src="/assets/icons/close.svg" alt="">
+        <img (click)="overlayService.membersOverlay()"
+            class="cursor-pointer hover:scale-[1.2] active:scale-[0.9] duration-200" src="/assets/icons/close.svg"
+            alt="">
     </div>
-
 
     <div class="flex flex-col w-full gap-3 p-3 overflow-auto h-52">
 
-        @for (item of usersService.users; track $index) {
-        <app-user [userInfo]="item" ></app-user>
+        @for (item of filterUsers(); track $index) {
+        <app-user [userInfo]="item"></app-user>
         }
     </div>
 
@@ -22,6 +22,5 @@
             Mitglieder hinzufüngen
         </span>
     </div>
-
 
 </section>
