add members overlay

--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -57,7 +57,7 @@
                 }
                 }
         </div>
-        <button (click)="addMemberOverlay()" class="flex items-center justify-center rounded-full size-[34px] bg-primary">
+        <button (click)="overlayService.addMembersOverlay()" class="flex items-center justify-center rounded-full size-[34px] bg-primary">
             <img src="assets/icons/add_user.svg" alt="Add user">
         </button>
         }
