--- a/src/app/components/shared/popUp/members/members.component.html
+++ b/src/app/components/shared/popUp/members/members.component.html
@@ -15,12 +15,12 @@
         }
     </div>
 
-    <div
+    <button (click)="overlayService.addMembersOverlay();overlayService.membersOverlay()"
         class="flex items-center gap-4 py-1  cursor-pointer h-14 px-7 rounded-[30px] hover:bg-primary mx-5 hover:scale-[1.1] duration-200 shadow-md active:scale-[0.9]">
         <img src="/assets/icons/person_add.svg" alt="">
         <span>
             Mitglieder hinzufüngen
         </span>
-    </div>
+    </button>
 
 </section>
