--- a/src/app/components/shared/popUp/add-user/add-user.component.html
+++ b/src/app/components/shared/popUp/add-user/add-user.component.html
@@ -28,13 +28,12 @@
     </div>
 
     @if (true) {
-    <div class="absolute bottom-[-145px] border border-black w-60 h-60 bg-white rounded-[30px] overflow-auto py-4 flex flex-col gap-2">
-      
+    <div
+        class="absolute bottom-[-145px] border border-black w-60 h-60 bg-white rounded-[30px] overflow-auto py-4 flex flex-col gap-2">
         @for (item of filterService.filteredMembers(); track $index) {
-         <app-user [userInfo]="item" (click)="channelService.addChoiceMembers(item)"></app-user>
+        <app-user [userInfo]="item" (click)="channelService.addChoiceMembers(item)"></app-user>
         }
-
-    </div> 
+    </div>
     }
 
 
