--- a/src/app/components/shared/user/user.component.html
+++ b/src/app/components/shared/user/user.component.html
@@ -1,4 +1,4 @@
-<section [ngClass]="{'bg-blue-500': channelService.checkIfUserExists(userInfo)}"
+<section [ngClass]="{'userChecked': channelService.checkIfUserExists(userInfo)}"
     class="flex items-center justify-center gap-4 px-5 py-1  w-fit rounded-[30px] hover:bg-primary cursor-pointer bg-white hover:scale-[1.005] duration-200 active:scale-[0.97] active:bg-purple2">
     <div class="relative">
         <img class="size-14 rounded-[50%]" src="{{userInfo.avatar}}" alt="">
