--- a/src/app/components/navigation/channels/channels.component.html
+++ b/src/app/components/navigation/channels/channels.component.html
@@ -1,8 +1,7 @@
-
 <section class="py-2 h-fit">
 
     <div class="flex items-center justify-between w-full h-12 px-2">
-        <button (click)="turnCannelArrow()" class="flex items-center gap-4 py-3">
+        <button (click)="turnCannelArrow()" class="flex items-center gap-3 py-3">
             <img class="size-8" id="channel-arrow" src="/assets/icons/arrow_drop_down.svg" alt="">
             <div class="flex gap-2 text-xl font-bold">
                 <img class="size-6" src="/assets/icons/workspaces.svg" alt="">
@@ -14,14 +13,15 @@
             alt="">
     </div>
 
-    <ul id="dropList" class="flex flex-col w-full gap-2 text-lg">
+    <ul id="dropList" class="flex flex-col w-full gap-2 pl-8 text-lg">
 
-        
+
         @for (channel of channelService.channels; track $index; let i = $index) {
-                <li (click)="mainNavService.openChannel(); channelService.openChannel(channel,i); messageService.getMessages(channel)"
-                    class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3">
-                    <span class="font-bold">#</span> {{channel.name}}
-                </li>
+        <li (click)="mainNavService.openChannel(); channelService.openChannel(channel,i); messageService.getMessages(channel); mainNavService.markedChannel($index)"
+            [ngClass]="{'userChecked': $index == mainNavService.ChannelMarked}"
+            class="flex items-center gap-4 min-w-[200px] rounded-[20px] px-10 cursor-pointer w-fit h-9 hover:bg-primary hover:font-bold hover:text-purple3">
+            <span class="font-bold">#</span> {{channel.name}}
+        </li>
 
         }
         <li (click)="overlayService.addCannelOverlay()"
@@ -30,4 +30,3 @@
     </ul>
 
 </section>
-
