--- a/src/app/components/navigation/direct-messages/direct-messages.component.html
+++ b/src/app/components/navigation/direct-messages/direct-messages.component.html
@@ -1,7 +1,7 @@
 <section class="py-2 h-fit">
 
     <div class="flex items-center justify-between w-full h-12 px-2">
-        <button (click)="directMessagesToggle()" class="flex items-center gap-4 py-3">
+        <button (click)="directMessagesToggle()" class="flex items-center gap-3 py-3">
             <img class="size-8" id="driectArrow" src="/assets/icons/arrow_drop_down.svg" alt="">
             <div class="flex gap-2 text-xl font-bold">
                 <img class="size-6" src="/assets/icons/account_circle.svg" alt="">
@@ -10,11 +10,12 @@
         </button>
     </div>
 
-    <ul id="directList" class="flex flex-col gap-1">
+    <ul id="directList" class="flex flex-col gap-1 pl-8">
         @for (userItem of userService.users; track $index) {
-        <li (click)="mainNavService.openChannel(true); dmService.openDMs(userItem) "><app-user [userInfo]="userItem" ></app-user></li>
+        <li (click)="mainNavService.openChannel(true); dmService.openDMs(userItem); mainNavService.markedUser($index)">
+            <app-user [userInfo]="userItem" [i]="$index" ></app-user>
+        </li>
         }
     </ul>
-
 
 </section>
