--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -7,11 +7,11 @@
             Devspace
         </div>
 
-        <img class="cursor-pointer hover:scale-[1.1] active:scale-[0.9] duration-150 size-8"
+        <img (click)="mainNavService.removeMarker()" class="cursor-pointer hover:scale-[1.1] active:scale-[0.9] duration-150 size-8"
             src="/assets/icons/edit_square.svg" alt="">
     </div>
 
-    <div>
+    <div class="flex flex-col pl-8">
 
         @if (filterService.searchValue().length >= 1) {
         <ul class="flex flex-col">
@@ -33,14 +33,6 @@
         @if(filterService.searchValue().length < 1) { <app-channels></app-channels>
             <app-direct-messages></app-direct-messages>
             }
-
-
     </div>
-
-    <!-- <button class="absolute p-2 text-white border bottom-16 left-4 bg-slate-500"
-        (click)="directMessageService.sendDirectMessage()">Send Test DirectMessages to Firebase</button>
-
-    <button class="absolute p-2 text-white border bottom-2 left-4 bg-slate-500"
-        (click)="threadService.createThreadForMessage()">Send Test Thread to Firebase</button> -->
 
 </section>
