--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -21,7 +21,7 @@
         (click)="overlayService.profileOverlay(true, dmService.othertUser); ">
         <div class="relative">
             <img class="size-[50px] rounded-full" src="{{ dmService.othertUser.avatar }}" alt="Avatar">
-            <span class="absolute right-0 bg-online size-4 bottom-1 rounded-[50%] border-white border-2" [ngClass]="{'bg-online' :dmService.othertUser.online, 'bg-offline' : !dmService.othertUser.online}" alt="Online"></span>
+            <span class="absolute right-0 bg-online size-4 bottom-1 rounded-[50%] border-white border-2" [ngClass]="{'bg-online' :isOnline, 'bg-offline' : !isOnline}" alt="Online"></span>
         </div>
         <p class="text-xl font-bold">{{ dmService.othertUser.name }}</p>
     </div>
