--- a/src/app/components/main-page/direct-message/direct-message.component.html
+++ b/src/app/components/main-page/direct-message/direct-message.component.html
@@ -4,10 +4,10 @@
         [chatType]="'dm'"></app-chat-messages>
         <div class="flex flex-col gap-6 px-4 pt-4 ml-4">
             <div class="flex items-end">
-                <img class="size-[88px] rounded-full" src="{{dmService.othertUser.avatar}}" alt="Avatar">
-                <p class="text-2xl font-bold">{{ dmService.othertUser.name }}</p>
+                <img class="size-[88px] rounded-full" src="{{dmService.otherUser.avatar}}" alt="Avatar">
+                <p class="text-2xl font-bold">{{ dmService.otherUser.name }}</p>
             </div>
-            <p class="text-xl text-textgray">Diese Unterhaltung findet nur zwischen <span class="text-purple3">&#64;{{dmService.othertUser.name}}</span> und dir statt.</p>
+            <p class="text-xl text-textgray">Diese Unterhaltung findet nur zwischen <span class="text-purple3">&#64;{{dmService.otherUser.name}}</span> und dir statt.</p>
         </div>
 </div>
 <app-chat-input [chatType]="'dm'"></app-chat-input>
