--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -18,12 +18,12 @@
     }
     @case ('dm') {
     <div class="flex items-center gap-4 px-4 py-2 rounded-[30px] cursor-pointer hover:bg-primary"
-        (click)="overlayService.profileOverlay(true, dmService.othertUser); ">
+        (click)="overlayService.profileOverlay(true, dmService.otherUser); ">
         <div class="relative">
-            <img class="size-[50px] rounded-full" src="{{ dmService.othertUser.avatar }}" alt="Avatar">
+            <img class="size-[50px] rounded-full" src="{{ dmService.otherUser.avatar }}" alt="Avatar">
             <span class="absolute right-0 bg-online size-4 bottom-1 rounded-[50%] border-white border-2" [ngClass]="{'bg-online' :isOnline, 'bg-offline' : !isOnline}" alt="Online"></span>
         </div>
-        <p class="text-xl font-bold">{{ dmService.othertUser.name }}</p>
+        <p class="text-xl font-bold">{{ dmService.otherUser.name }}</p>
     </div>
     }
     @case ('new') {
