--- a/src/app/components/shared/popUp/add-members/add-members.component.html
+++ b/src/app/components/shared/popUp/add-members/add-members.component.html
@@ -3,10 +3,11 @@
 
     <div class="flex justify-between">
         <h2>Leute hinzufügen</h2>
-        <img (click)="overlayService.addMembersOverlay()" class="cursor-pointer hover:scale-[1.1] duration-150" src="/assets/icons/close.svg" alt="">
+        <img (click)="overlayService.addMembersOverlay()" class="cursor-pointer hover:scale-[1.1] duration-150"
+            src="/assets/icons/close.svg" alt="">
     </div>
 
-    <input class="border border-lightpurple rounded-[30px] h-14 px-5" type="text" placeholder="Name eingeben">
+    <input [(ngModel)]="userSearch" class="border border-lightpurple rounded-[30px] h-14 px-5" type="text" placeholder="Name eingeben">
 
     <button
         class="self-end w-40 h-12 text-white bg-gray-500 rounded-3xl hover:scale-[1.1] duration-150 active:scale-[0.9]">
@@ -14,3 +15,18 @@
     </button>
 
 </div>
+
+
+@if (userSearch.length > 0) {
+    <div  class="border border-black h-[300px] bg-primary rounded-[30px] flex justify-center w-[300px]">
+
+        <ul class="flex flex-col gap-2 overflow-auto">
+            @for (item of userService.users; track $index) {
+            <li class=""><app-user [userInfo]="item"></app-user></li>
+            }
+        </ul>
+    
+    
+    
+    </div>
+}
