--- a/src/app/components/shared/popUp/log-out/log-out.component.html
+++ b/src/app/components/shared/popUp/log-out/log-out.component.html
@@ -1,6 +1,6 @@
-<section class="w-full lg:max-w-md  h-52 rounded-[30px] lg:rounded-none lg:rounded-tl-[30px] lg:rounded-bl-[30px] lg:rounded-br-[30px] px-7 py-8 bg-white text-2xl shadow-2xl">
+<section
+  class="w-full lg:max-w-md  h-52 rounded-[30px] lg:rounded-none lg:rounded-tl-[30px] lg:rounded-bl-[30px] lg:rounded-br-[30px] px-7 py-8 bg-white text-2xl shadow-2xl">
 
-  
   <div class="flex flex-col h-full">
     <div (click)="overlayService.profileOverlay(false, currentUser)"
       class="flex items-center gap-4 py-2 px-7 h-[50%] rounded-[100px] hover:bg-primary cursor-pointer hover:text-purple3 duration-200 hover:scale-[1.05] active:scale-[0.9]">
@@ -8,7 +8,7 @@
       <span>Profile</span>
     </div>
 
-    <div (click)="localStorageS.clear()" routerLink=""
+    <div (click)="localStorageS.clear();overlayService.logoutOvelay()" routerLink=""
       class="flex items-center gap-4 py-2 px-7 h-[50%] rounded-[100px] hover:bg-primary cursor-pointer hover:text-purple3 duration-200 hover:scale-[1.05] active:scale-[0.9]">
       <img src="/assets/icons/logout.svg" alt="" />
       <span>Log out</span>
