--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -49,44 +49,46 @@
 
 <!--Overlays-->
 
-<div (click)="overlayService.addCannelOverlay()" [ngClass]="{hidden: overlayService.hideAddChannel}"
-  class="absolute flex top-0 bottom-0 left-0 right-0 z-[1] bg-white lg:bg-[rgba(0,0,0,0.4)] justify-center lg:items-center">
-  <app-add-channel (click)="$event.stopPropagation()" class="top-[20%]"></app-add-channel>
+<div (click)="overlayService.addCannelOverlay()" [class.active]="!overlayService.hideAddChannel"
+  class="overlay-backdrop absolute flex top-0 bottom-0 left-0 right-0 z-[1] bg-white lg:bg-[rgba(0,0,0,0.4)] justify-center lg:items-center">
+  <app-add-channel (click)="$event.stopPropagation()" class="overlay-panel top-[20%]">
+  </app-add-channel>
 </div>
 
 
-<div (click)="overlayService.addUserOverlay()"
-  class="absolute top-0 bottom-0 left-0 right-0 flex items-end justify-center lg:items-center"
-  [ngClass]="{hidden: overlayService.hideAddUser}">
-  <app-add-user (click)="$event.stopPropagation()" class="w-full lg:max-w-[710px]"></app-add-user>
+<div (click)="overlayService.addUserOverlay()" [class.active]="!overlayService.hideAddUser"
+  class="absolute top-0 bottom-0 left-0 right-0 flex items-end z-[1] lg:bg-[rgba(0,0,0,0.4)] justify-center overlay-backdrop lg:items-center">
+  <app-add-user (click)="$event.stopPropagation()" class="overlay-panel w-full lg:max-w-[710px]">
+  </app-add-user>
 </div>
 
 
-<div (click)="overlayService.addMembersOverlay()" [ngClass]="{hidden: overlayService.hideAddMembersOverlay}"
-  class="absolute top-0 bottom-0 left-0 z-[1] right-0 flex items-end justify-center lg:items-center lg:bg-[rgba(0,0,0,0.4)]">
-  <app-add-members (click)="$event.stopPropagation()" class="absolute top-[200px] right-[20px]"></app-add-members>
+<div (click)="overlayService.addMembersOverlay()" [class.active]="!overlayService.hideAddMembersOverlay"
+  class="absolute overlay-backdrop top-0 bottom-0 left-0 z-[1] right-0 flex items-end justify-center lg:items-center lg:bg-[rgba(0,0,0,0.4)]">
+  <app-add-members (click)="$event.stopPropagation()"
+    class="overlay-panel absolute top-[200px] right-[20px]"></app-add-members>
 </div>
 
 
-<div (click)="overlayService.editChannel()" [ngClass]="{hidden: overlayService.hideEditChannel}"
-  class="flex justify-center items-center absolute top-0 z-[1] bottom-0 left-0 right-0 bg-white lg:bg-[rgba(0,0,0,0.4)]">
-  <app-edit-channel (click)="$event.stopPropagation()"></app-edit-channel>
+<div (click)="overlayService.editChannel()" [class.active]="!overlayService.hideEditChannel"
+  class="flex overlay-backdrop justify-center items-center absolute top-0 z-[1] bottom-0 left-0 right-0 bg-white lg:bg-[rgba(0,0,0,0.4)]">
+  <app-edit-channel class="overlay-panel" (click)="$event.stopPropagation()"></app-edit-channel>
 </div>
 
 
-<div (click)="overlayService.profileOverlay(false, currentUser)" [ngClass]="{hidden: overlayService.hideProfileOverlay}"
-  class="absolute top-0 bottom-0 left-0 right-0 flex items-center justify-center z-[1] bg-[rgba(0,0,0,0.4)]">
-  <app-profile (click)="$event.stopPropagation()" class="w-full max-w-lg"></app-profile>
+<div (click)="overlayService.profileOverlay(false, currentUser)" [class.active]="!overlayService.hideProfileOverlay"
+  class="absolute overlay-backdrop top-0 bottom-0 left-0 right-0 flex items-center justify-center z-[1] bg-[rgba(0,0,0,0.4)]">
+  <app-profile (click)="$event.stopPropagation()" class="w-full max-w-lg overlay-panel"></app-profile>
 </div>
 
 
-<div (click)="overlayService.logoutOvelay()" [ngClass]="{hidden: overlayService.hideLogoutOverlay}"
-  class="absolute top-0 bottom-0 left-0 right-0 flex items-end justify-center z-[1] lg:items-start lg:justify-end bg-[rgba(0,0,0,0.4)]">
-  <app-log-out class="w-full lg:w-fit lg:mt-24 lg:mr-4"></app-log-out>
+<div (click)="overlayService.logoutOvelay()" [class.active]="!overlayService.hideLogoutOverlay"
+  class="absolute overlay-backdrop top-0 bottom-0 left-0 right-0 flex items-end justify-center z-[1] lg:items-start lg:justify-end bg-[rgba(0,0,0,0.4)]">
+  <app-log-out class="w-full overlay-panel lg:w-fit lg:mt-24 lg:mr-4"></app-log-out>
 </div>
 
 
-<div (click)="overlayService.membersOverlay()" [ngClass]="{hidden: overlayService.hideMembersOverlay}"
-  class="absolute top-0 bottom-0 left-0 right-0 flex items-end justify-center z-[1] lg:items-start lg:justify-end bg-[rgba(0,0,0,0.4)]">
-  <app-members class="absolute top-[180px] right-3" (click)="$event.stopPropagation()"></app-members>
+<div (click)="overlayService.membersOverlay()" [class.active]="!overlayService.hideMembersOverlay"
+  class="absolute top-0 overlay-backdrop bottom-0 left-0 right-0 flex items-end justify-center z-[1] lg:items-start lg:justify-end bg-[rgba(0,0,0,0.4)]">
+  <app-members class="absolute overlay-panel top-[180px] right-3" (click)="$event.stopPropagation()"></app-members>
 </div>
