--- a/src/app/components/navigation/direct-messages/direct-messages.component.html
+++ b/src/app/components/navigation/direct-messages/direct-messages.component.html
@@ -11,9 +11,9 @@
     </div>
 
     <ul id="directList" class="flex flex-col gap-1 pl-8">
-        @for (userItem of userService.users; track $index) {
-        <li (click)="mainNavService.openChannel(true); dmService.openDMs(userItem); mainNavService.markedUser($index)">
-            <app-user [userInfo]="userItem" [i]="$index" ></app-user>
+        @for (userItem of userService.users; track $index; let i = $index) {
+        <li [style.animation-delay]="(i * 0.05) + 's'" class="user-item" (click)="mainNavService.openChannel(true); dmService.openDMs(userItem); mainNavService.markedUser($index)">
+            <app-user class="hover:font-bold hover:text-purple3" [userInfo]="userItem" [i]="$index" ></app-user>
         </li>
         }
     </ul>
