--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -22,14 +22,15 @@
 
 <section class="flex h-[calc(100vh-80px)] gap-3 p-3 bg-primary">
 
-  @if (mainNavService.showNav()) {
-  <div class="flex flex-col w-full h-[calc(100% - 3rem)] lg:max-w-[366px] my-6 rounded-[30px] overflow-hidden bg-white">
+
+  <div [class.active]="mainNavService.showNav()"
+    class="nav-container flex flex-col w-full h-[calc(100% - 3rem)] lg:max-w-[366px] my-6 rounded-[30px] overflow-hidden bg-white">
     <app-search class="lg:hidden"></app-search>
     <app-navigation class="w-full h-full"></app-navigation>
   </div>
-  }
 
-  @if (mainNavService.showChannel()) {
+
+  <!-- @if (mainNavService.showChannel()) {
   @if (mainNavService.newMessage) {
   <app-new-message
     class="flex flex-col w-full max-h-[calc(100% - 3rem)] my-6 pb-4 bg-white rounded-[30px]"></app-new-message>
@@ -39,12 +40,53 @@
   } @else {
   <app-channel class="flex flex-col w-full max-h-[calc(100% - 3rem)] my-6 pb-4 bg-white rounded-[30px]"></app-channel>
   }
-  }
+  } -->
+
+  <div [class.active]="mainNavService.showChannel()" class="flex-1 my-6 channel-container">
+    @if (mainNavService.newMessage) {
+    <app-new-message class="flex flex-col w-full h-full pb-4 bg-white rounded-[30px]"></app-new-message>
+    } @else if (mainNavService.directMessage) {
+    <app-direct-message class="flex flex-col w-full h-full pb-4 bg-white rounded-[30px]"></app-direct-message>
+    } @else {
+    <app-channel class="flex flex-col w-full h-full pb-4 bg-white rounded-[30px]"></app-channel>
+    }
+  </div>
 
   @if (mainNavService.showThread()) {
   <app-thread class="w-full h-[calc(100% - 3rem)] xl:max-w-[485px] my-6"></app-thread>
   }
+
 </section>
+
+
+
+
+<!-- <section class="flex h-[calc(100vh-80px)] gap-3 p-3 bg-primary relative">
+
+  <div [class.active]="mainNavService.showNav()"
+    class="nav-container flex flex-col w-full h-[calc(100% - 3rem)] lg:max-w-[366px] my-6 rounded-[30px] overflow-hidden bg-white">
+    <app-search class="lg:hidden"></app-search>
+    <app-navigation class="w-full h-full"></app-navigation>
+  </div>
+
+ 
+  <div [class.active]="mainNavService.showChannel()"
+    class="flex-1 my-6 channel-container">
+    @if (mainNavService.newMessage) {
+      <app-new-message class="flex flex-col w-full h-full pb-4 bg-white rounded-[30px]"></app-new-message>
+    } @else if (mainNavService.directMessage) {
+      <app-direct-message class="flex flex-col w-full h-full pb-4 bg-white rounded-[30px]"></app-direct-message>
+    } @else {
+      <app-channel class="flex flex-col w-full h-full pb-4 bg-white rounded-[30px]"></app-channel>
+    }
+  </div>
+
+
+  <div [class.active]="mainNavService.showThread()"
+    class="thread-container w-full h-[calc(100% - 3rem)] xl:max-w-[485px] my-6">
+    <app-thread></app-thread>
+  </div>
+</section> -->
 
 
 <!--Overlays-->
