--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -1,8 +1,8 @@
 <section
-    class="flex items-center justify-between box-border bg-white py-[13px] px-4 header rounded-ss-[30px] rounded-se-[30px]">
+    class="flex items-center justify-between box-border bg-white min-h-[90px] py-[13px] px-10 header rounded-ss-[30px] rounded-se-[30px]">
     @switch (chatType) {
     @case ('channel') {
-    <div class="flex items-center gap-[14px] py-[3px] px-[10px] w-max rounded-full cursor-pointer text-xl font-bold hover:bg-primary"
+    <div class="flex items-center gap-[14px] py-[3px] px-[10px] w-max rounded-full cursor-pointer text-xl font-bold hover:bg-primary hover:text-purple1"
         (click)="overlayService.editChannel()">
         <img class="size-[22px]" src="assets/icons/hashtag.svg" alt="hashtag">
         @if (channelService.channels[this.channelService.currentIndex()]) {
@@ -17,7 +17,7 @@
     </div>
     }
     @case ('dm') {
-    <div class="flex items-center gap-4 px-4 py-2 rounded-[30px] cursor-pointer hover:bg-primary"
+    <div class="flex items-center gap-4 px-4 py-2 rounded-[30px] cursor-pointer hover:bg-primary min-w-[300px]"
         (click)="overlayService.profileOverlay(true, dmService.otherUser); ">
         <div class="relative">
             <img class="size-[50px] rounded-full" src="{{ dmService.otherUser.avatar }}" alt="Avatar">
