--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -115,7 +115,7 @@
 .nav-container {
     transform: translateX(-100%);
     opacity: 0;
-    transition: transform 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.2s ease;
+    transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.2s ease;
     position: absolute;
     left: 0;
     top: 0;
@@ -160,7 +160,7 @@
   
   /* Responsive Anpassungen */
   @media (max-width: 768px) {
-    .nav-container:not(.active),
+    // .nav-container:not(.active),
     .thread-container:not(.active) {
       display: none;
     }
