--- a/src/app/components/shared/popUp/add-user/add-user.component.html
+++ b/src/app/components/shared/popUp/add-user/add-user.component.html
@@ -1,5 +1,5 @@
 <section
-    class="lg:max-w-[710px] border border-black h-fit rounded-[30px] bg-white py-7 px-4 flex flex-col gap-5 shadow-lg relative">
+    class="lg:max-w-[710px] h-fit rounded-[30px] bg-white py-7 px-4 flex flex-col gap-5 shadow-lg relative">
 
     <div class="flex justify-between">
         <span class="text-2xl font-bold">Leute hinzufügen</span>
