--- a/src/app/components/shared/popUp/add-members/add-members.component.html
+++ b/src/app/components/shared/popUp/add-members/add-members.component.html
@@ -1,5 +1,5 @@
 <div
-    class=" w-[400px] h-64 rounded-tl-[30px] rounded-bl-[30px] rounded-br-[30px] flex py-7 px-4 flex-col justify-between shadow-2xl bg-white">
+    class=" w-[400px] h-64 relative rounded-tl-[30px] rounded-bl-[30px] rounded-br-[30px] flex py-7 px-4 flex-col justify-between shadow-2xl bg-white">
 
     <div class="flex justify-between">
         <h2>Leute hinzufügen</h2>
@@ -7,26 +7,27 @@
             src="/assets/icons/close.svg" alt="">
     </div>
 
-    <input [(ngModel)]="userSearch" class="border border-lightpurple rounded-[30px] h-14 px-5" type="text" placeholder="Name eingeben">
+    <input [(ngModel)]="userSearch" (input)="onSearchInput()" [ngClass]="{'text-purple1 bg-primary': userExist}"
+        class="border border-lightpurple rounded-[30px] h-14 px-5" type="text" placeholder="Name eingeben">
 
-    <button
+    <button (click)="addUser()"
         class="self-end w-40 h-12 text-white bg-gray-500 rounded-3xl hover:scale-[1.1] duration-150 active:scale-[0.9]">
         Hinzufügen
     </button>
 
-</div>
 
 
-@if (userSearch.length > 0) {
-    <div  class="border border-black h-[300px] bg-primary rounded-[30px] flex justify-center w-[300px]">
+
+    @if (dropdownOpen) {
+    <div class="border absolute left-[-20px] top-[150px] border-black max-h-[400px] bg-primary rounded-[30px] flex justify-center w-fit max-w-[270px] px-3 py-2">
 
         <ul class="flex flex-col gap-2 overflow-auto">
-            @for (item of userService.users; track $index) {
-            <li class=""><app-user [userInfo]="item"></app-user></li>
+            @for (item of filteredMembers; track $index) {
+            <li class=""><app-user (click)="choiceUser(item)" [userInfo]="item"></app-user></li>
             }
         </ul>
-    
-    
-    
+
     </div>
-}
+    }
+
+</div>
