Add message hover options

--- a/src/app/components/shared/chat-input/chat-input.component.html
+++ b/src/app/components/shared/chat-input/chat-input.component.html
@@ -1,5 +1,5 @@
 <section class="h-[145px] p-3 mx-4 flex flex-1 flex-col  bg-white rounded-[20px] border-lightpurple border-[1px]">
-
+    {{ chatType }}
    @switch (chatType) {
     @case ('dm') {
         <textarea #messageInput [(ngModel)]="directMessageService.newMessage.message" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
