Make channel messages editable

--- a/src/app/components/shared/chat-input/chat-input.component.html
+++ b/src/app/components/shared/chat-input/chat-input.component.html
@@ -1,16 +1,20 @@
 <section class="h-[145px] p-3 mx-4 flex flex-1 flex-col  bg-white rounded-[20px] border-lightpurple border-[1px]">
     {{ chatType }}
-   @switch (chatType) {
-    @case ('dm') {
-        <textarea #messageInput [(ngModel)]="directMessageService.newMessage.message" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
+    @if (edit) {
+        <textarea #messageInput [(ngModel)]="editText" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
+    } @else {
+        @switch (chatType) {
+         @case ('dm') {
+             <textarea #messageInput [(ngModel)]="directMessageService.newMessage.message" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
+         }
+         @case ('channel') {
+             <textarea #messageInput [(ngModel)]="messageService.messageInput" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
+         }
+         @case ('thread') {
+             <textarea #messageInput [(ngModel)]="threadService.threadMessage.message" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
+         }
+        }
     }
-    @case ('channel') {
-        <textarea #messageInput [(ngModel)]="messageService.messageInput" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
-    }
-    @case ('thread') {
-        <textarea #messageInput [(ngModel)]="threadService.threadMessage.message" class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten..." name="" id=""></textarea>
-    }
-   }
 
     <div class="flex items-center justify-between h-10">
         <div class="flex gap-[25px]">
