--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -35,7 +35,7 @@
                         [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]':userService.fromCurrentUser(message.sender), ' rounded-ss-none': !userService.fromCurrentUser(message.sender) }">
                         <span class="max-w-full">{{ message.message }}</span>
                         @if (true) {
-                            <app-chat-input [chatType]="chatType"></app-chat-input>
+                            <app-chat-input [message]="message" [edit]="true" [chatType]="chatType"></app-chat-input>
                         }
                     </div>
                     
