--- a/src/app/components/shared/loading-screen/loading-screen.component.html
+++ b/src/app/components/shared/loading-screen/loading-screen.component.html
@@ -1,12 +1,21 @@
-<div class="absolute top-0 bottom-0 left-0 right-0 z-[100] flex items-center justify-center bg-primary">
-    <div class="dot-spinner scale-[2]">
-      <div class="dot-spinner__dot"></div>
-      <div class="dot-spinner__dot"></div>
-      <div class="dot-spinner__dot"></div>
-      <div class="dot-spinner__dot"></div>
-      <div class="dot-spinner__dot"></div>
-      <div class="dot-spinner__dot"></div>
-      <div class="dot-spinner__dot"></div>
-      <div class="dot-spinner__dot"></div>
+<div class="absolute top-0 bottom-0 left-0 right-0 z-[100] flex items-center justify-center bg-purple2">
+
+
+    <div class="absolute flex flex-col items-center gap-3 opacity-75 m pulse">
+        <img class="w-40" src="/assets/icons/Logo.svg" alt="">
+        <h1 class="text-5xl font-bold">DA Bubble</h1>
     </div>
-  </div>
+
+
+    <div class="dot-spinner scale-[2] opacity-[0.5] mb-14">
+        <div class="dot-spinner__dot"></div>
+        <div class="dot-spinner__dot"></div>
+        <div class="dot-spinner__dot"></div>
+        <div class="dot-spinner__dot"></div>
+        <div class="dot-spinner__dot"></div>
+        <div class="dot-spinner__dot"></div>
+        <div class="dot-spinner__dot"></div>
+        <div class="dot-spinner__dot"></div>
+    </div>
+
+</div>
