--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -28,7 +28,7 @@
 
     <!--  -->
     <div
-      class="w-[60px] h-[60px] absolute bottom-10 right-4 rounded-[100px] bg-purple1 z-[999] flex items-center justify-center cursor-pointer block md:hidden">
+      class="size-[60px] absolute bottom-10 right-4 rounded-[100px] bg-purple1 z-[999] items-center justify-center cursor-pointer block md:hidden">
       <img src="assets/icons/edit_square2.svg" alt="" class="pl-[4px] w-8 h-8" />
     </div>
   </div>
