--- a/src/app/components/shared/popUp/add-members/add-members.component.html
+++ b/src/app/components/shared/popUp/add-members/add-members.component.html
@@ -10,23 +10,21 @@
     <input [(ngModel)]="userSearch" (input)="onSearchInput()" [ngClass]="{'text-purple1 bg-primary': userExist}"
         class="border border-lightpurple rounded-[30px] h-14 px-5" type="text" placeholder="Name eingeben">
 
+
     <button (click)="addUser()"
         class="self-end w-40 h-12 text-white bg-gray-500 rounded-3xl hover:scale-[1.1] duration-150 active:scale-[0.9]">
         Hinzufügen
     </button>
 
 
-
-
     @if (dropdownOpen) {
-    <div class="border absolute left-[-20px] top-[150px] border-black max-h-[400px] bg-primary rounded-[30px] flex justify-center w-fit max-w-[270px] px-3 py-2">
-
+    <div
+        class="border absolute left-[-20px] top-[150px] border-black max-h-[400px] bg-primary rounded-[30px] flex justify-center w-fit max-w-[270px] px-3 py-2">
         <ul class="flex flex-col gap-2 overflow-auto">
             @for (item of filteredMembers; track $index) {
             <li class=""><app-user (click)="choiceUser(item)" [userInfo]="item"></app-user></li>
             }
         </ul>
-
     </div>
     }
 
