--- a/src/app/components/shared/popUp/members/members.component.html
+++ b/src/app/components/shared/popUp/members/members.component.html
@@ -10,7 +10,7 @@
 
     <div class="flex flex-col w-full gap-3 p-3 overflow-auto h-52">
 
-        @for (item of membersArray; track $index) {
+        @for (item of membersArray(); track $index) {
         <app-user [userInfo]="item"
             (click)="overlayService.profileOverlay( true, item);overlayService.membersOverlay()"></app-user>
         }
